Fix tabs overflow bug

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -30,6 +30,10 @@
   bottom: 0;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 ::-webkit-scrollbar
 {
   width: .5em;  /* for vertical scrollbars */
