--- a/assets/scss/vendor_configs/vuetify.scss
+++ b/assets/scss/vendor_configs/vuetify.scss
@@ -14,7 +14,7 @@
 
 .tabs--light {
   .tabs__bar {
-    background-color: rgba(0,0,0,0.08);
+    background-color: rgba(0,0,0,0.07);
 
     .tabs__item {
       color: rgba(0,0,0,0.8) !important;
